// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parallaxWebsiteActions Dispatches the correct action and payload (initImages) 1`] = `
Array [
  Object {
    "array": Array [
      Object {
        "a": 1,
        "b": 2,
      },
      Object {
        "a": 1,
        "b": 2,
      },
    ],
    "type": "INIT_IMAGES",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (initServices) 1`] = `
Array [
  Object {
    "array": Array [
      Object {
        "a": 1,
        "b": 2,
      },
      Object {
        "a": 1,
        "b": 2,
      },
    ],
    "type": "INIT_SERVICES",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (initTeamMembers) 1`] = `
Array [
  Object {
    "array": Array [
      Object {
        "a": 1,
        "b": 2,
      },
      Object {
        "a": 1,
        "b": 2,
      },
    ],
    "type": "INIT_TEAM_MEMBERS",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (menuButtonIsToggled) 1`] = `
Array [
  Object {
    "type": "MENU_BUTTON_IS_TOGGLED",
    "val": true,
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (showCard) 1`] = `
Array [
  Object {
    "type": "SHOW_CARD",
    "val": true,
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (toggleMenuButton) 1`] = `
Array [
  Object {
    "type": "TOGGLE_MENU_BUTTON",
  },
]
`;
